cmake_minimum_required(VERSION 3.31.6)
project(LearnCpp VERSION 0.1)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(src/1_1)
add_subdirectory(src/1_11)
add_subdirectory(src/2_4)
add_subdirectory(src/2_7)
add_subdirectory(src/2_8)
add_subdirectory(src/2_9)
add_subdirectory(src/2_10)
add_subdirectory(src/2_11)
